# deepseekr1maker

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
deepseekmaker/cli/: __init__.py
deepseekmaker/config/: reward_config.py
deepseekmaker/rewards/: language_reward.py
deepseekr1maker/: __init__.py
deepseekr1maker/cli/: main.py
deepseekr1maker/config/: __init__.py  model_config.py  training_config.py
deepseekr1maker/data/: data_loader.py  dataset_formatter.py
deepseekr1maker/rewards/: __init__.py  accuracy_reward.py  cosine_reward.py  format_reward.py  reasoning_reward.py  repetition_reward.py
deepseekr1maker/training/: __init__.py  r1zero_trainer.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_data.py  test_rewards.py  test_training.py
